test/files/neg/sip23-uninitialized-3.scala
//> using options -Xfatal-warnings
//
object Test {
  var f3: 1 = f3   // warning: recursive
}
